feature(log/service)：日志和服务
- 重构日志
- 添加开启和关闭服务的接口

--- a/internal/web/templates/index.html
+++ b/internal/web/templates/index.html
@@ -704,7 +704,7 @@
                 .then(data => {
                     if (data.status === 'success') {
                         const isRunning = data.data.isRunning;
-                        if (isRunning === 1) {
+                        if (isRunning === true) {
                             serviceStatus.innerHTML = '<span class="status-running">服务已启动</span>';
                             startServiceBtn.disabled = true;
                             stopServiceBtn.disabled = false;
